--- a/Asciiaria/Asciiaria.vcxproj
+++ b/Asciiaria/Asciiaria.vcxproj
@@ -71,19 +71,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\Chris\Documents\Visual Studio 2015\Projects\SFML-2.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Chris\Documents\Visual Studio 2015\Projects\SFML-2.4\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\SFML-2.4\include;C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\SFML-2.4\lib;C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Users\Chris\Documents\Visual Studio 2015\Projects\SFML-2.4\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\Chris\Documents\Visual Studio 2015\Projects\SFML-2.4\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\SFML-2.4\include;C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\SFML-2.4\lib;C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -93,13 +97,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Chris\Documents\Visual Studio 2015\Projects\DragonflyLib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>DragonflyLib.lib;sfml-system-d.lib;sfml-window-d.lib;sfml-graphics-d.lib;sfml-main-d.lib;sfml-audio-d.lib;sfml-network-d.lib;Winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Chris\Documents\Visual Studio 2015\Projects\DragonflyLib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -110,10 +114,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\SFML-2.4\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\SFML-2.4\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>DragonflyLib.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -126,14 +133,14 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Chris\Documents\Visual Studio 2015\Projects\DragonflyLib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Chris\Documents\Visual Studio 2015\Projects\DragonflyLib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>DragonflyLib.lib;sfml-system-d.lib;sfml-window-d.lib;sfml-graphics-d.lib;sfml-main-d.lib;sfml-audio-d.lib;sfml-network-d.lib;Winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -147,12 +154,15 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\SFML-2.4\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\Asciiaria\library;C:\Users\Thomas Lourenco\Documents\Visual Studio 2015\Projects\SFML-2.4\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>DragonflyLib.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
